stat_svc StatsClient fix